--- a/js_random/html.html
+++ b/js_random/html.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="app" class="circle"></div>
-    <script src="random.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
