--- a/Tic-Tac-Toe/TicTacToe.html
+++ b/Tic-Tac-Toe/TicTacToe.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="body">
+    <div>
         <div class="greedy">
             <div class="square">1</div>
             <div class="square">2</div>
