--- a/Tic-Tac-Toe/TicTacToe.html
+++ b/Tic-Tac-Toe/TicTacToe.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <div class="score">player score</div>
+    <div class="cscore">computer score</div>
     <div>
         <div class="greedy">
             <div class="square">1</div>
