--- a/Tic-Tac-Toe/TicTacToe.html
+++ b/Tic-Tac-Toe/TicTacToe.html
@@ -8,19 +8,22 @@
 </head>
 
 <body>
-    <div class="score">player score</div>
-    <div class="cscore">computer score</div>
+    <div class="score">player1 score</div>
+    <div class="cscore">player2 score</div>
     <div>
         <div class="greedy">
-            <div class="square">1</div>
-            <div class="square">2</div>
-            <div class="square">3</div>
-            <div class="square">4</div>
-            <div class="square">5</div>
-            <div class="square">6</div>
-            <div class="square">7</div>
-            <div class="square">8</div>
-            <div class="square">9</div>
+            <div id="square1" class="square">1
+                <img id="image1" class="image" src="/image/x.png">
+                <img id="image2" class="image" src="/image/o.png">
+            </div>
+            <div id="square2" class="square">2</div>
+            <div id="square3" class="square">3</div>
+            <div id="square4" class="square">4</div>
+            <div id="square5" class="square">5</div>
+            <div id="square6" class="square">6</div>
+            <div id="square7" class="square">7</div>
+            <div id="square8" class="square">8</div>
+            <div id="square9" class="square">9</div>
         </div>
     </div>
 </body>
